# 8gent-code

./: .dockerignore  .gitignore  2026-03-17-225055-plan-location-usersjamesspaldingclaudeprojec.txt  8GENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SOUL.md  benchmark-results.json  demo.tape  fly.toml  humanity-poem.md  onboarding.md  package.json  tsconfig.json
.8gent/: config.json  hooks.sample.yaml  user.json
.changeset/: daemon-stabilize.md  fly-deployment.md  proactive-business.md  v1-daemon-protocol.md
.exports/: 2026-03-17-224816-plan-location-usersjamesspaldingclaudeproject1.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
apps/clui/src-tauri/: Cargo.toml  tauri.conf.json
apps/clui/src-tauri/capabilities/: default.json
apps/clui/src-tauri/src/: agent.rs  lib.rs  main.rs  permissions.rs
benchmarks/: .gitignore  TERMINAL-BENCH.md  TESTING-PROMPTS.md  head-to-head.ts  results.tsv  runner.ts  types.ts
brand/: BRAND_HEART.md  BRAND_VALUES.md  COMPETITIVE_ANALYSIS.md  USER_PERSONAS.md  WORKSHOP_AGENDA.md
config/: board-vessels.yaml  metaclaw.yaml  training-proxy.yaml
data/: design-systems.db-shm
demos/: multi-agent-demo.ts
docker/: .dockerignore  Dockerfile.daemon
docs/: 8GI-BRAND.md  8GI-HUMAN-BOARD-ROLES.md  8GI-MANIFESTO.md  ABILITY-ABSTRACTION-PROCESS.md  AUTORESEARCH.md  BENCHMARKS.md  BRANCH-DECISIONS.md  COMPANION-NFT-STRATEGY.md  DAEMON-PROTOCOL.md  DEPLOYMENT.md  HARNESS-PLAN.md  KERNEL-FINETUNING.md  MULTI-PLATFORM-SPEC.md  PERSONALIZATION.md  RPC-MODE-SPEC.md  (+8 more)
(+422 files in other folders)
