[package]
name = "eight-clui"
version = "0.1.0"
edition = "2021"
description = "8gent CLUI - Native desktop overlay for the 8gent autonomous coding agent"
authors = ["James Spalding"]
license = "MIT"
rust-version = "1.75"

[lib]
name = "eight_clui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-png",
] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
